tests/test_input_files/good/test_good_array_9.punkt
main {
	const A = alloc [[[[[int]]]]] (1).
	A[0] = alloc [[[[int]]]] (1).
	A[0][0] = alloc [[[int]]] (1).
	A[0][0][0] = alloc [[int]] (1).
	A[0][0][0][0] = alloc [int] (0).
	println A.
}
