tests/test_input_files/bad/test_bad_array_4.punkt
main {
	const arr = alloc [int] (2).
	arr[0] = 1.
	arr[1] = "hello".
}
